PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add *pel-show-broken-symlinks* command bound to ~<f11> f s~.  It searches for broken symlink in a directory tree and lists them in a buffer if any are found.
- Add PEL preliminary support for Fortran programming language when *pel-use-fortran* is turned on.
- Add preliminary support for Algol68 programming language via the *a68-mode* when *pel-use-algol* is turned on.
- Add key bindings for Emacs Lisp code test code coverage under the ~<f12> C-t C-c~ key prefix.
- Add support for cram test files via cram-mode when *pel-use-cram-mode* is on.
- Add support for several package/libraries that help writing ERT test code and check for test coverage:
  noflet, el-mock, el-spy, mocker, coverlay, test-cover-mark, coverage, ert-expectation, ert-runner and buttercup.
  Also add the ~<f12> C-t~ prefix to Emacs-Lisp mode
  to access the PEL ~<f1>~, ~<f2>~ and ~<f3>~ keys to get access to the ERT PDF, and customization of test package/libraries including Emacs builtin testcover.
- Modified the key binding to *pel-run-ert* to ~<f12> C-t C-t~ to allow use the prefix.
- For C, C++, D, Objective-C, ~C-c C-k~ and ~<f12> F4> M-;~ are now bound to *pel-c-toggle-comment-style* instead of *c-toggle-comment-style*.
  The *pel-c-toggle-comment-style* uses *c-toggle-comment-style* and prints a message showing which style is now used.
- Add support for the C3 programming language when the *pel-use-c3* is turned on.
- Add support for corfu completion when *pel-use-corfu* is turned on and corfu-terminal when *pel-use-corfu-terminal* is turned on: it is required for Emacs < 31 to use corfu in terminal mode.
- Add support for marginalia when *pel-use-marginalia* is turned on.  It's possible to activate it when Emacs starts or later with a command.
- Change/simplify/ key bindings for better mnemonic: